--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello World</title>
+    <link href="style.css" rel="stylesheet" />
 
-  <!-- gloria haleluja -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <!-- gloria haleluja -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- arab & romantic font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Scheherazade+New:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- arab & romantic font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Scheherazade+New:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- cooming soon -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
-
-</head>
-<body>
-
+    <!-- cooming soon -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <audio id="bgMusic" src="music/bgMusic.mp3" loop></audio>
 
     <div class="amplop">
@@ -35,12 +42,11 @@
     <div class="isi-surat">
       <div class="content-wrap">
         <div class="close">X</div>
-        <div class="content" id="content">
-        </div>
+        <div class="content" id="content"></div>
       </div>
     </div>
 
-  <script defer type="text/javascript" src="/main.js"></script>
-  <script defer type="text/javascript" src="/typeText.js"></script>
-</body>
+    <script defer type="text/javascript" src="main.js"></script>
+    <script defer type="text/javascript" src="typeText.js"></script>
+  </body>
 </html>
